<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/international_call_select_prefix_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InternationalCallActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/btn_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="end"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/it_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/_39"
                    android:textColorHint="@color/black"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/es_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_34" />

                <RadioButton
                    android:id="@+id/gr_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_49"
                    android:textColorHint="#000" />

                <RadioButton
                    android:id="@+id/fr_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_33" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/italy"
                android:textColor="#868686"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/spain"
                android:textColor="#868686"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/geramny"
                android:textColor="#868686"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/france"
                android:textColor="#868686"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/select_prefix"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/select_prefix" />

</LinearLayout>