<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/international_call_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">


        <EditText
            android:id="@+id/input_prefix_number"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:editable="false"
            android:autofillHints="phone"
            android:hint="@string/enter_prefix"
            android:inputType="phone" />
        <Button
            android:id="@+id/choose_prefix"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/choose_prefix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/input_inter_phone_number"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="phone"
            android:hint="@string/enter_phone_number"
            android:editable="false"
            android:inputType="phone" />

        <Button
            android:id="@+id/choose_international_number"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/choose_international_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_compose_inter_call"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/compose" />

        <Button
            android:id="@+id/btn_make_inter_call"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/call" />
    </LinearLayout>


</LinearLayout>