<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sms_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmsActivity">

    <EditText
        android:id="@+id/input_number_message"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints="phone"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/input_text_message"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints="phone"
        android:hint="@string/enter_sms_text"
        android:inputType="textMultiLine"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_send_message"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/direct_to_sms" />
</LinearLayout>